syntax = "proto3";

package msg;

message Packet {
    enum Sender {
        AGENT = 0;
        CONTROLLER = 1;
    }
    enum Type {
        HELLO = 0;
        PROBE = 1;
        PROBE_RESULT = 2;
    }
    Sender sender = 1;
    Type type = 2;
    int32 error_code = 3;
    string error_message = 4;
    oneof packet {
        Hello hello = 5;
        Probe probe = 6;
        Result result = 7;
    }
}

message Hello {
    string username = 1;
    string password = 2;
}

message Probe {
    enum Action {
        DEACTIVATE = 0;
        ACTIVATE = 1;
        RUN_ONCE = 2;
        DELETE = 3;
    }
    Action action = 1;
    ActionConfig config = 2;
    string schedule = 3;
}

message ActionConfig {
    string id = 1;
    int32 action = 2;
    map<string,string> parameters = 3;
}

message Result {
    string id = 1;
    string configId = 2;
    int32 dataCode = 3;
    bytes data = 4;
    map<string,string> tags = 5;
    int64 timestamp = 6;
}